adding all initial and final files

--- a/status.html
+++ b/status.html
@@ -30,48 +30,46 @@
         }
 
         .feature img {
-            width: 100px; /* Adjust size as needed */
-            height: auto;
+            width: 200px; /* Adjust size as needed */
+            height: 1;
         }
 
-        .feature h3 {
+        .feature h2 {
             margin-top: 10px;
-            color: #4caf50; /* Green color for headings */
+            color: rgb(248, 246, 246); /* Green color for headings */
         }
     </style>
 </head>
 <body>
     <header>
         <h1>Welcome!</h1>
-        <img src="images/status-image.jpg" alt="Happy students" class="header-image">
     </header>
 
     <section id="status-message">
-        <p>Your account has been created successfully! You can now track your mood and schedule your first counseling session.</p>
 
         <div id="feature-images">
             <div class="feature">
                 <a href="mood-tracking.html" class="button">
-                    <img src="images/track-mood-icon.png" alt="Track Mood Icon">
-                    <h3>Track Your Mood</h3>
+                    <img src="track-mood-icon.jpg" alt="Track Mood Icon">
+                    <h2>Track Your Mood</h2>
                 </a>
             </div>
             <div class="feature">
-                <a href="counseling.html" class="button">
-                    <img src="images/schedule-counseling-icon.png" alt="Schedule Counseling Icon">
-                    Schedule Counseling
+                <a href="schedulecounseling.html" class="button">
+                    <img src="schedule-counseling-icon.jpg" alt="Schedule Counseling Icon">
+                    <h2>Schedule Counseling</h2>
                 </a>
             </div>
             <div class="feature">
                 <a href="previous-logs.html" class="button">
-                    <img src="images/previous-logs-icon.png" alt="Previous Mood Logs Icon">
-                    <h3>View Previous Mood Logs</h3>
+                    <img src="previous-logs-icon.jpg" alt="Previous Mood Logs Icon">
+                    <h2>View Previous Mood Logs</h2>
                 </a>
             </div>
             <div class="feature">
-                <a href="counselor-selection.html" class="button"> <!-- Link to counselor selection -->
-                    <img src="images/chat-ai-icon.png" alt="Chat with AI Counselor Icon">
-                    <h3>Chat with AI Counselor</h3>
+                <a href="counselor-chat.html" class="button"> <!-- Link to counselor selection -->
+                    <img src="chat-ai-icon.jpg" alt="Chat with AI Counselor Icon">
+                    <h2>Chat with AI Counselor</h2>
                 </a>
             </div>
         </div>
